force-app/main/default/objects/DataLineApi_Data__c/DataLineApi_Data__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>DataLineAPI連携用情報</label>
</CustomObject>