force-app/main/default/objects/DataLineApi_Data__c/fields/account_id__c.field-meta.xml
<CustomField>
    <fullName>account_id__c</fullName>
    <label>account_id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>