force-app/main/default/objects/DataLineApi_Data__c/fields/client_key__c.field-meta.xml
<CustomField>
    <fullName>client_key__c</fullName>
    <label>client_key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>