force-app/main/default/objects/DataLineApi_Data__c/fields/CRYPTO_KEY__c.field-meta.xml
<CustomField>
    <fullName>CRYPTO_KEY__c</fullName>
    <label>CRYPTO_KEY</label>
    <length>255</length>
    <type>Text</type>
</CustomField>