force-app/main/default/objects/DataLineApi_Data__c/fields/get_endpoint__c.field-meta.xml
<CustomField>
    <fullName>get_endpoint__c</fullName>
    <label>取得用エンドポイント</label>
    <type>Url</type>
</CustomField>