force-app/main/default/objects/DataLineApi_Data__c/fields/session_id_endpoint__c.field-meta.xml
<CustomField>
    <fullName>session_id_endpoint__c</fullName>
    <label>セッションID用エンドポイント</label>
    <type>Url</type>
</CustomField>